@@ -32,67 +32,37 @@ import lombok.RequiredArgsConstructor;
 @Service
 public class ResultService {
     private final AuthService authService;
-
     private final AthleteRepository athleteRepository;
-
     private final CoachRepository coachRepository;
-
     private final PhysicalTestRepository physicalTestRepository;
-
     private final ResultRepository resultRepository;
 
     private static final Logger log = LoggerFactory.getLogger(ResultService.class);
 
-    @PreAuthorize("@authService.hasPermission(authentication, 'ADMIN') or @authService.hasPermission(authentication, 'COACH')")
-    public void assignTest(TestAssignmentRequest request){
+    @PreAuthorize("@authService.canManageAthletes(authentication, #request.usernames)")
+    public void assignTest(TestAssignmentRequest request) {
         List<Athlete> athletes = athleteRepository.findAllByUsernameIn(request.getUsernames());
-
-        PhysicalTest physicalTest = physicalTestRepository.findById(request.getPhysicalTestId()).orElseThrow(() -> new IllegalArgumentException("Physical test not found"));
+        PhysicalTest physicalTest = physicalTestRepository.findById(request.getPhysicalTestId())
+                .orElseThrow(() -> new IllegalArgumentException("Physical test not found"));
 
         athletes.forEach(athlete -> {
             Result result = new Result();
             result.setAthlete(athlete);
             result.setTest(physicalTest);
-            //result.setDateToComplete(request.getDateToComplete());
+            result.setStatus(ResultStatus.ASSIGNED.getStatus());
+            resultRepository.save(result);
         });
     }
 
     public void submitAthleteResult(TestResultSubmission resultSubmission, Authentication auth) {
-        Result result = resultRepository.findById(resultSubmission.getId()).orElseThrow(() -> new IllegalArgumentException("Physical test result not found"));
+        Result result = resultRepository.findById(resultSubmission.getId())
+                .orElseThrow(() -> new IllegalArgumentException("Physical test result not found"));
 
-        if(!authService.checkIfUserIsAuthenticatedUser(result.getAthlete(), auth)){
+        if (!authService.isAthleteOwner(auth, result.getAthlete())) {
             throw new AccessDeniedException("You are not authorized to submit this result.");
         }
 
-        PhysicalTestProof requiredProof = PhysicalTestProof.valueOf(result.getTest().getProof());
-
-        switch(requiredProof){
-            case VIDEO:
-                if (isMissing(resultSubmission.getVideoProof())) {
-                    throw new IllegalArgumentException("A video proof is required for this test.");
-                }
-                result.setVideoProof(resultSubmission.getVideoProof());
-                break;
-
-            case PHOTO:
-                if (isMissing(resultSubmission.getImageProof())) {
-                    throw new IllegalArgumentException("A photo proof is required for this test.");
-                }
-                result.setPhotoProof(resultSubmission.getImageProof());
-                break;
-
-            case BOTH:
-                if (isMissing(resultSubmission.getVideoProof()) || isMissing(resultSubmission.getImageProof())) {
-                    throw new IllegalArgumentException("Both photo and video proofs are required for this test.");
-                }
-                result.setVideoProof(resultSubmission.getVideoProof());
-                result.setPhotoProof(resultSubmission.getImageProof());
-                break;
-
-            case NONE:
-            default:
-                break;
-        }
+        validateProofRequirements(result, resultSubmission);
 
         if (isMissing(resultSubmission.getResultValue())) {
             throw new IllegalArgumentException("The result value is missing for this test");
@@ -100,56 +70,76 @@ public class ResultService {
 
         result.setResultValue(resultSubmission.getResultValue());
         result.setCommentText(resultSubmission.getComment());
-
         result.setStatus(ResultStatus.PENDING.getStatus());
+        resultRepository.save(result);
     }
 
-    public void cancelSubmitionAthleteResult(Long testResultId, Authentication auth) {
-        Result result = resultRepository.findById(testResultId).orElseThrow(() -> new IllegalArgumentException("Physical test result not found"));
+    public void cancelSubmissionAthleteResult(Long testResultId, Authentication auth) {
+        Result result = resultRepository.findById(testResultId)
+                .orElseThrow(() -> new IllegalArgumentException("Physical test result not found"));
 
-        if(authService.checkIfUserIsAuthenticatedUser(result.getAthlete(), auth)){
-            throw new AccessDeniedException("You are not authorized to submit this result.");
+        if (!authService.isAthleteOwner(auth, result.getAthlete())) {
+            throw new AccessDeniedException("You are not authorized to cancel this submission.");
         }
 
         result.setStatus(ResultStatus.ASSIGNED.getStatus());
+        resultRepository.save(result);
     }
 
     @PreAuthorize("@authService.hasPermission(authentication, 'ADMIN') or @authService.hasPermission(authentication, 'COACH')")
     public void approveAthleteResult(Long testResultId, boolean approved) {
-        Result result = resultRepository.findById(testResultId).orElseThrow(() -> new IllegalArgumentException("Physical test result not found"));
+        Result result = resultRepository.findById(testResultId)
+                .orElseThrow(() -> new IllegalArgumentException("Physical test result not found"));
         
         String status = approved ? ResultStatus.APPROVED.getStatus() : ResultStatus.REJECTED.getStatus();
-        
         result.setStatus(status);
+        resultRepository.save(result);
     }
 
-    public List<TestData> getTestResults(Authentication auth){
+    public List<TestData> getTestResults(Authentication auth) {
         UserType currentType = authService.getAuthenticatedUserType(auth);
         log.info("User {} with role {} is retrieving test results", auth.getName(), currentType);
-        switch (currentType){
-            case ADMIN: log.info("Admin user {} is retrieving all test results", auth.getName());
-                return resultRepository.findAll().stream().map(TestData::new).collect(Collectors.toList());
-            case COACH: 
-                Coach coach = coachRepository.findByUsername(auth.getName())
-                        .orElseThrow(() -> new IllegalArgumentException("Coach profile not found"));
+        
+        return switch (currentType) {
+            case ADMIN -> resultRepository.findAll().stream().map(TestData::new).toList();
+            case COACH -> getCoachTeamResults(auth.getName());
+            default -> resultRepository.findByAthleteUsername(auth.getName()).stream().map(TestData::new).toList();
+        };
+    }
 
-                List<Athlete> teamAthletes = athleteRepository.findByAthleteTeamsTeamId(coach.getTeam().getId());
+    private List<TestData> getCoachTeamResults(String coachUsername) {
+        Coach coach = coachRepository.findByUsername(coachUsername)
+                .orElseThrow(() -> new IllegalArgumentException("Coach profile not found"));
 
-                if (teamAthletes.isEmpty()) {
-                    return Collections.emptyList();
-                }
+        List<Athlete> teamAthletes = athleteRepository.findByAthleteTeamsTeamId(coach.getTeam().getId());
+        if (teamAthletes.isEmpty()) {
+            return Collections.emptyList();
+        }
 
-                List<Long> athleteIds = teamAthletes.stream()
-                        .map(athlete -> athlete.getId())
-                        .collect(Collectors.toList());
+        List<Long> athleteIds = teamAthletes.stream().map(Athlete::getId).toList();
+        return resultRepository.findByAthleteIdIn(athleteIds).stream().map(TestData::new).toList();
+    }
 
-                return resultRepository.findByAthleteIdIn(athleteIds).stream()
-                        .map(TestData::new)
-                        .collect(Collectors.toList());
-            case ATHLETE: 
-            default:    return resultRepository.findByAthleteUsername(auth.getName()).stream()
-                            .map(TestData::new)
-                            .collect(Collectors.toList());
+    private void validateProofRequirements(Result result, TestResultSubmission submission) {
+        PhysicalTestProof requiredProof = PhysicalTestProof.valueOf(result.getTest().getProof());
+        boolean videoMissing = isMissing(submission.getVideoProof());
+        boolean photoMissing = isMissing(submission.getImageProof());
+
+        switch (requiredProof) {
+            case VIDEO -> {
+                if (videoMissing) throw new IllegalArgumentException("A video proof is required for this test.");
+                result.setVideoProof(submission.getVideoProof());
+            }
+            case PHOTO -> {
+                if (photoMissing) throw new IllegalArgumentException("A photo proof is required for this test.");
+                result.setPhotoProof(submission.getImageProof());
+            }
+            case BOTH -> {
+                if (videoMissing || photoMissing) throw new IllegalArgumentException("Both photo and video proofs are required.");
+                result.setVideoProof(submission.getVideoProof());
+                result.setPhotoProof(submission.getImageProof());
+            }
+            default -> {}
         }
     }
 
